# AmIGettingRageBaitByABotOnX

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: account.py  analyze.py  health.py
backend/app/api/v1/schemas/: analyze.py
backend/app/core/: exceptions.py  logging.py  middleware.py
backend/app/domain/interfaces/: analyzer.py  cache.py  repositories.py  twitter.py
backend/app/domain/services/: analysis.py
backend/app/infrastructure/db/: base.py  models.py  session.py
backend/app/infrastructure/db/repositories/: account.py
backend/app/infrastructure/ml/: download.py  pipeline.py
backend/app/infrastructure/ml/analyzers/: ai_content.py  behavioral.py  network.py  opportunism.py  political_shift.py  sentiment.py
backend/app/infrastructure/ml/analyzers/ai_content/: __init__.py  base.py  coordinator.py  cross_tweet.py  model_ensemble.py  scoring.py  statistical.py
backend/app/infrastructure/redis/: cache.py  client.py
backend/app/infrastructure/twitter/: api_client.py  mock_client.py  twikit_client.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_rename_political_shift_network_to_opportunism.py
backend/tests/: conftest.py
backend/tests/unit/: test_account_repository.py  test_ai_content_analyzer.py  test_ai_scoring.py  test_analysis_service.py  test_analyze_endpoint.py  test_analyze_schemas.py  test_behavioral_analyzer.py  test_config.py  test_cross_tweet.py  test_domain_models.py  test_exceptions.py  test_health.py  test_ml_pipeline.py  test_mock_twitter_client.py  test_model_ensemble.py  test_network_analyzer.py  test_political_shift_analyzer.py  test_sentiment_analyzer.py  test_statistical.py  test_twikit_client.py  test_twitter_api_client.py
claude/: deployement.md  project-pitch.md  security.md  taskfollowing.md  technical-tasks.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/components/: ScoreBar.vue  (+4 more)
scripts/: backup.sh
(+15 files in other folders)
