[project]
name = "amigettingragebaitbyabotonx"
version = "0.1.0"
description = "Analyse Twitter/X accounts for rage bait patterns"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis>=5.2,<6",
    "hiredis>=3.1,<4",
    "httpx>=0.28,<1",
    "slowapi>=0.1.9,<1",
    "python-dotenv>=1.0,<2",
    "twikit>=2.3,<3",
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
    "sentencepiece>=0.2,<1",
    "safetensors>=0.4,<1",
    "sentence-transformers>=3.0,<4",
    "huggingface-hub>=0.23,<1",
    "gunicorn>=23.0,<24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "factory-boy>=3.3,<4",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "bandit>=1.8,<2",
    "pip-audit>=2.7,<3",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108", "S311"]
"app/dependencies.py" = ["TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (requires DB/Redis)",
]
